:memo: velocity + spigot